--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Chrome Extension tribute to Ilta-Saatana (iltasaatana.fi)
+Tribuutti Ilta-Saatanalle (iltasaatana.fi)
+
+Valmiiksi pakattu Google Chrome -laajennus: iltasaatana.crx
