Dirty setup guide

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Tribuutti Ilta-Saatanalle (iltasaatana.fi)
 
-Valmiiksi pakattu Google Chrome -laajennus: iltasaatana.crx
+Valmiiksi pakattu Google Chrome -laajennus: iltasaatana.crx ("view raw" lataa tiedoston)
+Vedä ja raahaa ladattu filu Chromen laajennus-välilehteen ( "tools" -> "extensions" tai osoiteriville chrome://extensions/ )
