--- a/README
+++ b/README
@@ -5,3 +5,7 @@ Google Chrome -laajennuspalikka tribuuttina Ilta-Saatanalle (iltasaatana.fi)
 2. Avaa tiedosto ja salli lataus https://github.com/jaakkop/iltasaatana/blob/master/iltasaatana.crx?raw=true
 3. Drag & Droppaa tiedosto extensions-ikkunaan
 4. Avaa http://www.iltalehti.fi/ ja nauti saatana!
+
+
+Mikäli sait jotain kiksejä tästä teoksesta niin vippaa vaikka bitcoineja (esim 1 mBTC): 
+1GT6cWrKRcwtvA87RvtNZtuMHKyXhEFKye
