Korjattu README, saatana

--- a/README
+++ b/README
@@ -11,7 +11,8 @@ Mozilla Firefox:
 
 1. Avaa selain
 2. Avaa tiedosto ja salli lataus [iske .xpi linkki tähän]
-2. Drag & Droppaa tiedosto selaimeen ja hyväksy laajennus
+3. Drag & Droppaa tiedosto selaimeen ja hyväksy laajennus
+4. Avaa http://www.iltalehti.fi/ ja nauti saatana!
 
 Mikäli sait jotain kiksejä tästä teoksesta niin vippaa vaikka bitcoineja (esim 1 mBTC): 
 1GT6cWrKRcwtvA87RvtNZtuMHKyXhEFKye
