Updated package link for tracking click count with bit.ly

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Google Chrome -laajennuspalikka tribuuttina Ilta-Saatanalle (iltasaatana.fi)
  
 
 1. Avaa selaimessa chrome://extensions/
-2. Avaa tiedosto ja salli lataus https://github.com/jaakkop/iltasaatana/blob/master/iltasaatana.crx?raw=true
+2. Avaa tiedosto ja salli lataus [iltasaatana.crx](http://bit.ly/135K9kB)
 3. Drag & Droppaa tiedosto extensions-ikkunaan
 4. Avaa http://www.iltalehti.fi/ ja nauti saatana!
 
